# tissuearea

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
src/tissuearea/: __init__.py  area.py  cli.py  config.py  draw.py  masking.py  slide.py
tests/: test_area.py  test_cli.py  test_config.py  test_draw.py  test_masking.py
