[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tissuearea"
version = "0.1.0"
description = "Physical tissue-area estimation (mm²) from whole-slide-image tissue masks and MPP metadata."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "xbh0403", email = "xbh0403@gmail.com" }]
keywords = [
    "digital-pathology",
    "histopathology",
    "whole-slide-image",
    "tissue-segmentation",
    "openslide",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.21",
    "opencv-python-headless>=4.5",
    "openslide-python>=1.2",
    "scikit-image>=0.19",
    "pillow>=8.0",
    "tqdm>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
tissuearea = "tissuearea.cli:main"

[project.urls]
Homepage = "https://github.com/xbh0403/tissuearea"
Repository = "https://github.com/xbh0403/tissuearea"

[tool.hatch.build.targets.wheel]
packages = ["src/tissuearea"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
